--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_opposite_sex.govspeak.erb
@@ -4,7 +4,10 @@ Contact the [Civil Registrar](https://psa.gov.ph/lcr-directory) where you want t
 ## Prove you’re free to get married
 You need to swear an affirmation or affidavit that says you’re legally allowed to get married.
 
-This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %> per person. You can pay in the [local currency](/government/publications/philippines-consular-fees) in cash or by bank-issued cheque.
+This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %> per person. You can pay:
+ 
+- in the local currency in cash
+- in pounds sterling (£) by Visa or MasterCard
 
 ### Swear an affirmation or affidavit
 
