--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/uk/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/uk/partner_british/_opposite_sex.erb
@@ -6,6 +6,11 @@ The UK doesn’t issue certificates of no impediment (CNI) for marriages in Comm
 
 If you are marrying a British or other Commonwealth national who is resident in Kenya you may be able to obtain a marriage certificate from a UK Register Office under the [British Subject Facilities Acts](/marriages-civil-partnerships/what-you-need-to-do).
 
-Registrars in Kenya may accept a no trace letter issued by the General Register Office instead of a marriage certificate. You should check with the Kenyan authorities whether a no trace letter can be accepted.  A no trace letter costs £50 and can be obtained from the General Register Office by calling +44 (0)300 123 1837 (8am to 8pm Monday to Friday).  You should ask for a search to be made and quote the reference number "SEARCH 123".
+Registrars in Kenya may accept a no trace letter issued by the General Register Office instead of a marriage certificate. You should check with the Kenyan authorities whether a ‘no trace letter’ can be accepted. ‘No trace letters’ cost £50 for each 10 year period from age 16 or when you entered the UK. Specify how many years you need the search to cover and quote reference ‘SEARCH 123’. It can take up to 3 weeks for a ‘no trace letter’ to be issued.
+
+$C
+**General Register Office**\\
+Telephone: +44 (0)300 123 1837 (8am to 8pm Monday to Friday and 9am to 4pm Saturday)
+$C
 
 *[CNI]:certificate of no impediment
