Ensure 'Before you start' subheader is rendered on start page
Add the missing header to make the template consistent with the one in
frontend, which is normally used to render start pages
(https://github.com/alphagov/frontend/blob/master/app/views/simple_smart_answers/show.html.erb).

This fixes the header when previewing the app, either in development or
on a branch deployment.

--- a/app/views/smart_answers/landing.html.erb
+++ b/app/views/smart_answers/landing.html.erb
@@ -22,7 +22,12 @@
           <a rel="nofollow" href="<%= smart_answer_path(@name.to_s, started: "y") %>" class="big button"><%= start_node.start_button_text %></a>
         </p>
       </div>
-      <%= start_node.post_body %>
+      <% unless start_node.post_body.blank? %>
+        <div id="before-you-start">
+          <h2>Before you start</h2>
+          <%= start_node.post_body %>
+        </div>
+      <% end %>
     </div>
   </article>
 </div>
