--- a/lib/smart_answer_flows/pay-leave-for-parents/pay_leave_for_parents.govspeak.erb
+++ b/lib/smart_answer_flows/pay-leave-for-parents/pay_leave_for_parents.govspeak.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Calculate your leave and pay when you have a child
+  Check if you can get leave or pay when you have a child
 <% end %>
 
 <% content_for :meta_description do %>
@@ -16,12 +16,10 @@
 
   You’ll need to know:
 
-  * your employment status (eg employed or worker)
+  * your employment status (for example employed or worker)
   * the date you started your current job
   * the date you finished work (if you’ve finished)
   * how much you earn
-  * when you want your leave to start
-  * how much leave you want to take
 
   You’ll need the same information about your partner if you plan to share the care of the child with them.
 
