--- a/lib/smart_answer_flows/student-finance-calculator/outcomes/_nhs_full_time_funding.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/outcomes/_nhs_full_time_funding.govspeak.erb
@@ -29,12 +29,14 @@
 <% end %>
 - Practice placement expenses
 
-Each year you could also get:
+<% if uk_ft_circumstances.include?('children-under-17') || uk_ft_circumstances.include?('low-income') %>
+  Each year you could also get:
 
-<% if uk_ft_circumstances.include?('children-under-17') %>
-  - [Child Tax Credit](/child-tax-credit)
-<% end %>
+  <% if uk_ft_circumstances.include?('children-under-17') %>
+    - [Child Tax Credit](/child-tax-credit)
+  <% end %>
 
-<% if uk_ft_circumstances.include?('low-income') %>
-  - [University and college hardship funds](/extra-money-pay-university/university-and-college-hardship-funds) (extra help with costs while studying)
+  <% if uk_ft_circumstances.include?('low-income') %>
+    - [University and college hardship funds](/extra-money-pay-university/university-and-college-hardship-funds) (extra help with costs while studying)
+  <% end %>
 <% end %>
