--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= yield :head %>
 
     <% if @content_item %>
-      <%= render partial: 'govuk_component/analytics_meta_tags', locals: { content_item: @content_item } %>
+      <%= render partial: 'govuk_component/analytics_meta_tags', locals: { content_item: @content_item, strip_postcode_pii: true } %>
     <% end %>
   </head>
 <body class="mainstream">
