--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_joining_family_y.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_joining_family_y.govspeak.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :body do %>
-  ^If you’re visiting family or partner for 6 months or less, you’ll need a [family visit visa](/family-visit-visa).^
+  ^If you’re visiting family or partner for 6 months or less, you’ll need a [Standard Visitor visa](/standard-visitor-visa).^
 
   The visa you apply for depends on your family member’s situation.
 
