--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
   <div id="wrapper" class="answer smart_answer">
     <%= yield %>
+    <%= render "govuk_publishing_components/components/feedback" %>
   </div>
 </body>
 </html>
