--- a/lib/smart_answer_flows/benefit-cap-calculator/outcomes/outcome_not_affected_exemptions.govspeak.erb
+++ b/lib/smart_answer_flows/benefit-cap-calculator/outcomes/outcome_not_affected_exemptions.govspeak.erb
@@ -12,7 +12,7 @@
 
   You may be affected by the cap if your circumstances change.
 
-  Contact the Department for Work and Pensions if you need further help:
+  Contact the DWP if you need further help:
 
   <%= render partial: 'dwp_contact_details.govspeak.erb' %>
 <% end %>
