--- a/lib/smart_answer_flows/state-pension-age/outcomes/not_yet_reached_sp_age.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-age/outcomes/not_yet_reached_sp_age.govspeak.erb
@@ -6,21 +6,16 @@
 <% content_for :body do %>
   Your State Pension age is <%= calculator.state_pension_age %>.
 
-  ^[The State Pension age is under review](/government/news/proposed-new-timetable-for-state-pension-age-increases) and may change in the future.^
+  <% if calculator.rolling_increase_period? %>
+    ^This may increase by up to a year following [review of the State Pension age](/government/news/proposed-new-timetable-for-state-pension-age-increases).^
+  <% else %>
+    ^[The State Pension age is under review](/government/news/proposed-new-timetable-for-state-pension-age-increases) and may change in the future.^
+  <% end %>
 
   <% if calculator.can_apply? %>
     You can [claim your State Pension](<%= calculator.how_to_claim_url %>) now. Your payments will start after you reach State Pension age.
 
     Alternatively, you can [delay (defer) claiming](/deferring-state-pension).
-  <% end %>
-
-  ##Pension Credit
-  You might get [Pension Credit](/pension-credit) if you’re retired and on a low income.
-
-  <% if calculator.before_pension_credit_date? %>
-    You'll reach the Pension Credit qualifying age on <%= format_date(calculator.pension_credit_date) %>.
-  <% else %>
-    You’ve already reached the Pension Credit qualifying age. Check if you’re eligible to claim [Pension Credit](/pension-credit/eligibility).
   <% end %>
 
   <% if calculator.before_state_pension_date?(days: 30) && calculator.over_16_years_old? %>
@@ -32,4 +27,14 @@
   <% else %>
     Find out more information about the [new State Pension](/new-state-pension).
   <% end %>
+
+  ##Pension Credit
+  You might get [Pension Credit](/pension-credit) if you’re retired and on a low income.
+
+  <% if calculator.before_pension_credit_date? %>
+    You'll reach the Pension Credit qualifying age on <%= format_date(calculator.pension_credit_date) %>.
+  <% else %>
+    You’ve already reached the Pension Credit qualifying age. Check if you’re eligible to claim [Pension Credit](/pension-credit/eligibility).
+  <% end %>
+
 <% end %>
