--- a/lib/smart_answer_flows/am-i-getting-minimum-wage/questions/past_payment_date.govspeak.erb
+++ b/lib/smart_answer_flows/am-i-getting-minimum-wage/questions/past_payment_date.govspeak.erb
@@ -3,6 +3,7 @@
 <% end %>
 
 <% options(
+  "2017-04-01": "Apr 2017 - Mar 2018",
   "2016-10-01": "Oct 2016 - Mar 2017",
   "2016-04-01": "Apr 2016 - Sep 2016",
   "2015-10-01": "Oct 2015 - Mar 2016",
