--- a/lib/smart_answer_flows/student-finance-calculator/student_finance_calculator.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/student_finance_calculator.govspeak.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <% content_for :body do %>
-  This calculator is for students from England or the European Union (EU) starting a new course in academic years:
+  This calculator is for students from England or the European Union (EU) starting a new undergraduate course in academic years:
 
   + 2017 to 2018
   + 2018 to 2019
