Add a way to configure a 'none' checkbox option.
In order to make it easier for people to explicitly
select none of the given options, add a way to configure
a 'none' option to a checkbox question. The label and
option prefix are configurable.
Previous no-input functionality remains untouched if
the configuration method 'set_none_option' is not called
within the checkbox_question block.

--- a/app/views/smart_answers/inputs/_checkbox_question.html.erb
+++ b/app/views/smart_answers/inputs/_checkbox_question.html.erb
@@ -6,5 +6,16 @@
         <%= option.label %>
       </label>
     </li>
- <% end %>
+  <% end %>
+  <% if question.none_option_label.present? %>
+    <li class="none-option">
+      <% if question.none_option_prefix.present? %>
+        <p><%= question.none_option_prefix %></p>
+      <% end %>
+      <label for="response_<%= question.options.size %>" class="selectable">
+        <%= check_box_tag "response[]", "none", prefill_value_is?("none"), id: "response_#{question.options.size}" %>
+        <%= question.none_option_label %>
+      </label>
+    </li>
+  <% end %>
 </ul>
