Add 'none' option to child maintenance benefits question

--- a/lib/smart_answer_flows/calculate-your-child-maintenance/questions/gets_benefits.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-child-maintenance/questions/gets_benefits.govspeak.erb
@@ -1,13 +1,13 @@
 <% content_for :title do %>
   <% if calculator.paying? %>
-    Do you get any of these benefits?
+    Do you get any benefits or state pensions?
   <% else %>
-    Does the parent paying child maintenance get any of these benefits?
+    Does the parent paying child maintenance get any of these benefits or state pensions?
   <% end %>
 <% end %>
 
 <% content_for :hint do %>
-  If you do not receive any of these click 'Next step'.
+  If you do not receive any of these select 'None'.
 <% end %>
 
 <% options(calculator.state_benefits) %>
