--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/ecuador/uk/partner_local/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/ecuador/uk/partner_local/_opposite_sex.erb
@@ -3,29 +3,11 @@ Contact the [Embassy of Ecuador](/government/publications/foreign-embassies-in-t
 
 ##What you need to do
 
-You’ll be asked to provide an affirmation or affidavit document to prove you’re allowed to marry.
+You’ll be asked for an affirmation or affidavit document to prove you’re allowed to marry.
 
-Make an appointment at the British embassy or consulate in Ecuador to swear an affirmation or affidavit that you’re free to marry. You’ll need to bring your passport and pay a fee.
+To swear an affirmation or affidavit, [make an appointment at the British Embassy Quito](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-quito/oaths-affirmations-and-affidavits/slot_picker).
 
-$A
-British Embassy Quito
-Citiplaza Building,
-Naciones Unidas Avenue and República de El Salvador,
-14th Floor
-PO Box 17-17-830
-Quito
-Ecuador
-$A
-
-$C
-Switchboard: (593) (2) 3972 200 
-
-[British Embassy Quito - opening hours](https://www.gov.uk/world/organisations/british-embassy-in-ecuador/office/british-embassy)
-$C
-
-###Legalisation and translation
-
-You’ll need to get your affirmation or affidavit [translated](/government/collections/lists-of-translators-and-interpreters) into the local language and ‘[legalised](/get-document-legalised)’ (certified as genuine) by the local authorities - the embassy or consulate should be able to give you advice.
+You’ll need to bring your passport and pay a fee.
 
 If you’ve been divorced or widowed, you’ll need to provide:
 
