--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/ecuador/third_country/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/ecuador/third_country/partner_british/_opposite_sex.erb
@@ -18,6 +18,8 @@ You’ll also need to provide evidence if you’ve changed your name by deed pol
 
 ^Your partner will probably need to get an affirmation or affidavit as well.^
 
+%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
+
 ## Fees
 
 <%= render partial: 'consular_fees_table_items.govspeak.erb',
