--- a/lib/smart_answer_flows/check-uk-visa/questions/_purpose_of_visit_options.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/questions/_purpose_of_visit_options.govspeak.erb
@@ -1,7 +1,7 @@
 <% options(
   "study": "Study",
   "work": "Work, academic visit or business",
-  "tourism": "Tourism, including visiting friends or family",
+  "tourism": "Tourism",
   "school": "Stay with your child, if they’re at school",
   "marriage": "Get married or enter into a civil partnership",
   "medical": "Get private medical treatment",
