--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/iceland/_ceremony_country.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/iceland/_ceremony_country.govspeak.erb
@@ -1,6 +1,6 @@
 ##Before you start
 
-Contact the District Commissioner (‘Sýslumaðurinn’) where you want to get married to find out about local marriage laws, including what documents you’ll need. Under Icelandic law District Commissioners make their own decisions about the documents needed.
+You must contact the District Commissioner (‘Sýslumaðurinn’) where you want to get married to find out about local marriage laws, including what documents you’ll need. Under Icelandic law District Commissioners make their own decisions about the documents needed.
 
 ^You should get [legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Iceland](/foreign-travel-advice/iceland) before making any plans.^
 
