--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_same_sex.govspeak.erb
@@ -36,6 +36,8 @@ You'll need to bring [certain documents](/marriages-civil-partnerships/documents
 
 Your notice will be publicly displayed in the register office for 28 days. You can collect your CNI after this if nobody registers an objection.
 
+It costs £35 to give notice and get a CNI.
+
 You must download and fill in the [CNI application pack](/government/publications/uk-cni-pack) to exchange your UK-issued CNI for one that's valid in Spain. The pack contains a list of the documents you'll need.
 
 Send the form and documents by courier to the address in the application pack.
@@ -44,7 +46,7 @@ The consulate will issue your CNI and send it to you with your original document
 
 ^Your new CNI will be valid for 6 months from when your original CNI was issued.^
 
-It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the CNI. You’ll need to pay in the [local currency](/government/publications/spain-consular-fees by card. Fill in the payment form in the pack. 
+It costs £50 to exchange your CNI. You’ll need to pay in the [local currency](/government/publications/spain-consular-fees) by card. Fill in the payment form in the pack.
 
 ### Get a marital status certificate ('certificado de estado civil/soltería')
 
