--- a/app/views/smart_answers/visualise.html.erb
+++ b/app/views/smart_answers/visualise.html.erb
@@ -16,7 +16,7 @@
 
 <main id="content" role="main" class="visualisation-">
   <div class="container">
-    <%= render 'govuk_component/alpha_label' %>
+    <%= render 'govuk_publishing_components/components/phase_banner', phase: "alpha" %>
     <header class="page-header group">
       <div>
         <h1>
