--- a/lib/smart_answer_flows/calculate-statutory-sick-pay/outcomes/maximum_entitlement_reached.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-statutory-sick-pay/outcomes/maximum_entitlement_reached.govspeak.erb
@@ -1,5 +1,10 @@
 <% content_for :body do %>
   Your employee isn’t entitled to Statutory Sick Pay because they’ve already received the maximum amount of SSP (28 weeks).
 
-  You must send them [form SSP1](/employers-sick-pay/eligibility-and-form-ssp1) within 7 days of them going off sick. They may be able to get [Employment Support Allowance (ESA)](/employment-support-allowance).
+  You must send them [form SSP1](/government/publications/statutory-sick-pay-employee-not-entitled-form-for-employers) either:
+
+- within 7 days of them going off sick
+- on the 1st payday after they return to work 
+
+They may be able to get [Employment Support Allowance (ESA)](/employment-support-allowance).
 <% end %>
