--- a/lib/smart_answer_flows/student-finance-calculator/student_finance_calculator.govspeak.erb
+++ b/lib/smart_answer_flows/student-finance-calculator/student_finance_calculator.govspeak.erb
@@ -12,7 +12,7 @@
   + 2017 to 2018
   + 2018 to 2019
 
- ^There will be no change to the rights and status of EU citizens living in the UK until 2021. You and your family can apply for ‘[settled status](https://www.gov.uk/settled-status-eu-citizens-families)' to continue living in the UK after June 2021. The scheme will open fully by March 2019.^
+ ^There will be no change to the rights and status of EU citizens currently living in the UK until 30 June 2021, or 31 December 2020 if the UK leaves the EU [without a deal](https://www.gov.uk/government/publications/policy-paper-on-citizens-rights-in-the-event-of-a-no-deal-brexit). You and your family can apply to the [EU Settlement Scheme](https://www.gov.uk/settled-status-eu-citizens-families) to continue living in the UK. The scheme will open fully by 30 March 2019.
 
   Use the student finance calculator to estimate:
 
