--- a/lib/smart_answer_flows/estimate-self-assessment-penalties/questions/which_year.govspeak.erb
+++ b/lib/smart_answer_flows/estimate-self-assessment-penalties/questions/which_year.govspeak.erb
@@ -7,5 +7,6 @@
   "2013-14": "6 April 2013 to 5 April 2014",
   "2014-15": "6 April 2014 to 5 April 2015",
   "2015-16": "6 April 2015 to 5 April 2016",
-  "2016-17": "6 April 2016 to 5 April 2017"
+  "2016-17": "6 April 2016 to 5 April 2017",
+  "2017-18": "6 April 2017 to 5 April 2018"
 ) %>
